# fatline-server

./: Cargo.toml  LICENSE
migrations/2024-06-26-082521_create_user/: down.sql  up.sql
migrations/2024-07-15-125934_create_notifications/: down.sql  up.sql
src/: auth_layer.rs  error.rs  main.rs  notifier.rs  schema.rs  service.rs  signer_repo.rs  subscriber.rs  timeline.rs  user_models.rs  user_repo.rs  worker.rs
