[package]
name = "fatline-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4" }
tower = "0.4.13"
diesel = { version = "2.1.5", features = ["default", "sqlite"] }
blake3 = "1.5.1"
fatline-rs = { git = "https://github.com/0x330a-public/fatline-rs.git", rev = "5c0b32453d7fcd8ad4ecd13d18b955df92103194", features = ["service_types"] }
dotenv = "0.15.0"
eyre = "0.6.12"
futures-util = "0.3.30"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
