[package]
name = "fatline-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenvy_macro = "0.15.0"
dotenvy = "0.15.0"

tokio = { version = "1", features = ["full"] }

axum = { version = "0.7.4" }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

blake3 = "1.5.1"
eyre = "0.6.12"
futures-util = "0.3.30"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
ciborium = "0.2.2"
diesel = { version = "2.2.1", features = ["r2d2", "postgres", "uuid", "numeric"] }
r2d2_postgres = "0.18.1"
thiserror = "1.0.61"
tokio-stream = "0.1.15"
crossbeam = "0.8"
dashmap = { version = "6", features = ["inline"] }
clap = { version = "4.5.8", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.10.0", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }

[dependencies.fatline-rs]
git = "https://github.com/0x330a-public/fatline-rs.git"
rev = "8e4aebbf0786eebe2285961af62ca9206c8fa427"
features = ["service_types", "subscription"]
